# primo

./: README.md
msprimo/: .env  Cargo.toml
msprimo/migrations/2018-07-04-204008_create_story/: down.sql  up.sql
msprimo/migrations/2018-07-06-161133_create_accounts/: up.sql
msprimo/migrations/2018-07-06-180100_create_session/: up.sql
msprimo/src/: lib.rs  main.rs  schema.rs
msprimo/src/authentication/: mod.rs
msprimo/src/database/: account.rs  mod.rs  models.rs  session.rs  story.rs
msprimo/templates/: 404.html.hbs  index.html.hbs  login.html.hbs
msprimo/templates/content/css/: signin.css
msprimo/templates/layout/: standard.html.hbs
