[package]
name = "msprimo"
version = "0.1.0"
authors = ["Oscar Veldman <oveldman@gmail.com>"]

[dependencies]
chrono = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
rocket = "0.3.14"
rocket_codegen = "0.3.14"

[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["handlebars_templates", "json"]
