[package]
name = "msprimo"
version = "0.1.0"
authors = ["Oscar Veldman <oveldman@gmail.com>"]

[dependencies]
chrono = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
uuid = { version = "0.6.5", features = ["v4"] }
rocket = "0.3.14"
rocket_codegen = "0.3.14"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"


[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["handlebars_templates", "json"]
